<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Antigravity</string>
  <string name="ok">OK</string>
  <string name="cancel">Cancel</string>
  <string name="network_error">Network error :-(</string>
  <string name="io_error">I/O error :-(</string>
  <string name="copied">Copied to clipboard</string>
  <string name="empty_field">Empty field :-(</string>
  <string name="must_not_be_empty">must not be empty.</string>

  <!-- Login -->
  <string name="login_with_passport">Log in with App.net Passport</string>
  <string name="install_passport">Install App.net Passport</string>
  <string name="or">OR</string>
  <string name="username_hint">Username</string>
  <string name="password_hint">Password</string>
  <string name="login_with_password">Log in!</string>
	<string name="login_progress">Logging in...</string>
  <string name="adn_info_text">
    <![CDATA[
    An <a href="https://app.net">App.net account</a> is required to use Antigravity.
    App.net is your passport to great applications like this one :-)
    ]]>
  </string>
  <string name="perm_info">
    Antigravity will be able to see basic information about you, create new posts for you and manage your files.
  </string>

  <!-- File list -->
  <string name="load_more">Load More</string>
  <string name="upload">Pick to upload</string>
  <string name="camera">Upload from camera</string>
  <string name="pick_chooser_title">Pick a file to upload</string>
  <string name="log_out">Log out</string>
  <string name="log_out_confirm_title">Are you sure you want to log out?</string>
  <string name="support">Support</string>
  <string name="about">About</string>
  <string name="ptr_pull_to_refresh">Pull to refresh</string>
  <string name="ptr_release_to_refresh">Release to refresh</string>
  <string name="ptr_refreshing">Refreshing…</string>
  <string name="ptr_last_updated">Updated: %1$s</string>
  <string name="no_posts">
    <![CDATA[
    <h1>Welcome to Antigravity!</h1>
    Looks like you have no files in your App.net account.
    You can upload your first file using the buttons in the action bar at the top.
    Also, you can share files to Antigravity from other apps like Gallery.
    ]]>
  </string>

  <!-- File view -->
  <string name="share">Share</string>
  <string name="create_post">Post to App.net feed</string>
  <string name="delete">Delete</string>
  <string name="copy_to_clipboard">Copy public link</string>
  <string name="open_in_browser">Open in browser</string>
  <string name="make_public">Make public</string>
  <string name="make_public_success">The file is now public.</string>
  <string name="delete_confirm_title">Delete this file?</string>
  <string name="delete_confirm_message">It might be used by Posts.</string>
  <string name="delete_confirm_message_if_public">And it is public, so deleting it might also break links.</string>
  <string name="delete_success">File has been deleted.</string>
  <string name="share_chooser_title">Share this file with:</string>
  <string name="file_description_template">
    <![CDATA[
    {{name}}<br>
    {{date}} | {{size}} | {{type}}
    ]]>
  </string>

  <!-- Upload -->
  <string name="upload_activity">Upload to App.net</string>
  <string name="upload_description_template">
    <![CDATA[
    The following file will be shared to App.net:<br><br>
    <b>Name:</b>&nbsp;{{name}}<br>
    <b>Type:</b>&nbsp;{{type}}<br>
    {{#size}}<b>Size:</b>&nbsp;{{size}}{{/size}}
    ]]>
  </string>
  <string name="not_logged_in">You are not logged into Antigravity!</string>
  <string name="file_error">File error</string>
  <string name="invalid_intent">Invalid intent :-(</string>
  <string name="post_after_upload">Post to App.net after uploading</string>

  <!-- Post -->
  <string name="post_activity">Post to App.net</string>
  <string name="post_text_hint">Text</string>
  <string name="post_success">Post created!</string>
  <string name="post_type_label">Post as:</string>
  <string name="post_no_way">No way to post this file. Tap "Make public" and try again.</string>
  <string name="post_cancel_confirm_title">Cancel this post?</string>
  <string name="post_cancel_confirm_message">The text will be lost.</string>

  <!-- About -->
  <string name="about_activity">About Antigravity</string>
  <string name="app_info_text">
    <![CDATA[
    <h1>Antigravity!</h1>
    <p>
      Antigravity is a file manager for <a href="https://app.net">App.net</a>.
      It is <a href="http://floatboth.com">a&nbsp;{&nbsp;float:&nbsp;both&nbsp;}&nbsp;production</a>.
      Follow <a href="https://alpha.app.net/myfreeweb">@myfreeweb</a> on App.net :-)
    </p>
    <p>
      And please <a href="https://play.google.com/store/apps/details?id=com.floatboth.antigravity">rate and +1 on the Play Store!</a>
    </p>
    <h2>Why the name?</h2>
    <p>
      Well, I made Antigravity in response to <a href="http://orbitapp.net/">Orbit</a>, a similar app for iOS and OS X.
      Also <a href="http://xkcd.com/353/">an xkcd reference</a>, obviously.
    </p>
    <h2>Open source libraries:</h2>
    <p>
      <a href="http://androidannotations.org/">AndroidAnnotations</a>
      &mdash; <a href="com.floatboth.antigravity.license://androidannotations">view copyright notice</a>
    </p>
    <p>
      <a href="https://tika.apache.org/">Apache Tika</a>
      &mdash; <a href="com.floatboth.antigravity.license://tika">view copyright notice</a>
    </p>
    <p>
      <a href="https://commons.apache.org/proper/commons-io/">Apache Commons IO</a>
      &mdash; <a href="com.floatboth.antigravity.license://commons_io">view copyright notice</a>
    </p>
    <p>
      <a href="http://square.github.io/retrofit/">Retrofit</a>,
      <a href="http://square.github.io/picasso/">Picasso</a>,
      <a href="http://square.github.io/okhttp/">OkHttp</a>,
      <a href="https://github.com/square/mimecraft">Mime Craft</a>
      &mdash; <a href="com.floatboth.antigravity.license://square">view copyright notice</a>
    </p>
    <p>
      <a href="https://github.com/octo-online/robospice">RoboSpice</a>
      &mdash; <a href="com.floatboth.antigravity.license://robospice">view copyright notice</a>
    </p>
    <p>
      <a href="https://github.com/samskivert/jmustache">jmustache</a>
      &mdash; <a href="com.floatboth.antigravity.license://jmustache">view copyright notice</a>
    </p>
    <p>
      <a href="https://github.com/chrisbanes/ActionBar-PullToRefresh">ActionBar-PullToRefresh</a>
      &mdash; <a href="com.floatboth.antigravity.license://ptr">view copyright notice</a>
    </p>
    <p>
      <a href="https://github.com/jgilfelt/SystemBarTint">SystemBarTint</a>
      &mdash; <a href="com.floatboth.antigravity.license://systembartint">view copyright notice</a>
    </p>
    <p>
      <a href="https://github.com/appdotnet/ADNLogin-SDK-Android">ADNLogin-SDK-Android</a>
      &mdash; <a href="com.floatboth.antigravity.license://adnlogin">view copyright notice</a>
    </p>
    <p>
      <a href="https://github.com/johnkil/Android-RobotoTextView">Android-RobotoTextView</a>
      &mdash; <a href="com.floatboth.antigravity.license://robototextview">view copyright notice</a>
    </p>
    <h2>Also...</h2>
    Antigravity <a href="https://github.com/myfreeweb/antigravity">is open source itself!</a> &lt;3
    ]]>
  </string>

  <!-- License -->
  <string name="license_activity">License</string>
</resources>
