<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:fitsSystemWindows="true"
  android:clipToPadding="false"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <!-- dummy to prevent edittext autofocus -->
  <LinearLayout
    android:focusable="true" android:focusableInTouchMode="true"
    android:layout_width="0dp" android:layout_height="0dp"/>

  <ImageView android:src="@drawable/login_bg"
    android:layout_alignParentBottom="true"
    android:layout_alignParentRight="true"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />

  <ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingBottom="@dimen/activity_vertical_margin"
      android:paddingLeft="@dimen/activity_horizontal_margin"
      android:paddingRight="@dimen/activity_horizontal_margin"
      android:orientation="vertical">

      <com.devspark.robototextview.widget.RobotoTextView android:id="@+id/adn_info"
        android:textSize="22sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/after_field_margin_3x"
        android:layout_marginBottom="@dimen/after_field_margin_3x"
        app:typeface="roboto_slab_light" />

      <com.devspark.robototextview.widget.RobotoButton android:id="@+id/login_with_passport"
        android:visibility="gone"
        android:text="@string/login_with_passport"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:typeface="roboto_condensed_regular" />

      <com.devspark.robototextview.widget.RobotoButton android:id="@+id/install_passport"
        android:visibility="gone"
        android:text="@string/install_passport"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:typeface="roboto_condensed_regular" />


      <com.devspark.robototextview.widget.RobotoTextView android:id="@+id/or_label"
        android:text="@string/or"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/after_field_margin_2x"
        android:layout_marginBottom="@dimen/after_field_margin_2x"
        app:typeface="roboto_condensed_bold_italic" />


      <com.devspark.robototextview.widget.RobotoEditText
        android:id="@+id/username_field"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/after_field_margin"
        android:hint="@string/username_hint"
        android:inputType="text|textNoSuggestions"
        android:imeOptions="flagNoExtractUi"
        app:typeface="roboto_condensed_regular" />

      <com.devspark.robototextview.widget.RobotoEditText
        android:id="@+id/password_field"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/after_field_margin"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:typeface="normal"
        android:imeOptions="flagNoExtractUi|actionGo"
        app:typeface="roboto_condensed_regular" />

      <com.devspark.robototextview.widget.RobotoButton android:id="@+id/login_with_password"
        android:text="@string/login_with_password"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/after_field_margin_2x"
        app:typeface="roboto_condensed_regular" />

      <com.devspark.robototextview.widget.RobotoTextView android:text="@string/perm_info"
        android:textSize="12sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:typeface="roboto_condensed_light" />

    </LinearLayout>
  </ScrollView>
</RelativeLayout>
